--- a/CompilerTesting/CompilerTesting.csproj
+++ b/CompilerTesting/CompilerTesting.csproj
@@ -42,8 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GNUPrettyPrint.cs" />
+    <Compile Include="LuaTranspile.cs" />
     <Compile Include="Parser.cs" />
-    <Compile Include="Printer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tokenizer.cs" />
